# immo-rechner

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  README.md  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: build.yaml  testing.yaml
immo_rechner/app/: app.py  callbacks.py  input_parameters.py
immo_rechner/core/: abstract_position.py  cost.py  hypothetical_positions.py  profit_calculator.py  revenue.py  tax_contexts.py
nginx/: nginx.conf
nginx/dev/: nginx.conf
nginx/prod/: nginx.conf
notebooks/: demo.ipynb
tests/integration_tests/app/: test_app.py
tests/unit_tests/: cost.py  test_cost.py  test_hypothetical_positions.py  test_profit_calculator.py
