[tool.poetry]
name = "immo-rechner"
version = "0.1.0"
description = "A repository for evaluating profitability of an immobilien."
authors = ["Soheil Hajian <soheil.hajian@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8.2"
typing-extensions = "^4.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pre-commit = "^3.8.0"
black = "^24.8.0"
parameterized = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
