[tool.poetry]
name = "immo-rechner"
version = "0.1.0"
description = "A repository for evaluating profitability of an immobilien."
authors = ["Soheil Hajian <soheil.hajian@outlook.com>"]
license = "MIT License"
packages = [{include = "immo_rechner"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8.2"
typing-extensions = "^4.12.2"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
dash = "^2.17.1"
click = "^8.1.7"
gunicorn = "^23.0.0"
dash-auth = "^2.3.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pre-commit = "^3.8.0"
black = {extras = ["jupyter"], version = "^24.8.0"}
parameterized = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "immo_rechner.app.app:main"